fix faculty home, admin home, some css, clean some code

--- a/html/about.html
+++ b/html/about.html
@@ -42,8 +42,8 @@
                 <b> Contact Us </b>: malvat.anim0@gmail.com
             </div>
             
-            <div style="padding:8%;padding-top:14%; padding-bottom:12%;">
-                <a href="http://localhost/whiteboard/php/user_login_page.php" class="btn-f inline"> Log in</a>
+            <div class="log-in-btn">
+                <a href="http://localhost/whiteboard/php/user_login_page.php"> Log in</a>
             </div>
         </div> <!-- co-form -->
 
